[package]
name = "tuwi"
version = "0.1.0"
edition = "2021"
description = "Ratatui extended terminal widgets!"
repository = "https://github.com/tascord/tuwi"
license = "MIT"
authors = ["Flora Hill"]

[lib]
crate-type = ["cdylib"]

[dependencies]
crossterm = "0.27.0"
rat-input = "0.17.0"
ratatui = { version = "0.27.0", features = ["crossterm"] }
ratatui-widgets = "0.1.9"
